--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app='Beacons'>
+<html>
 
 <head>
 
@@ -17,27 +17,16 @@
 	// Redirect console.log to Evothings Workbench.
 	if (window.hyper && window.hyper.log) { console.log = hyper.log }
 	</script>
-	
+
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 	<script src="cordova.js"></script>
 	<script src="libs/jquery/jquery.js"></script>
 	<script src="libs/evothings/evothings.js"></script>
 	<script src="beaconsController.js"></script>
-	<script src="array.js"></script>
 	<script src="app.js"></script>
 </head>
 
-<body ng-controller='BeaconsController'>
-
-{{test}}
-
-<ul>
-
- <li ng-repeat='beacon in test'>
- 		{{beacon}}
- </li>
-
-</ul>
+<body>
 
 </body>
 
